--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,10 +12,13 @@ $selectBorder: #808080;
 $borderColor: rgba(0,0,0,.125);
 $cartColor: rgba(255, 255, 255, 0.75);
 $cartFormFooterBg: rgba(0,0,0,.03);
+$bgOfButton: #17a2b8;
+$hoverBgofButton: #0E84B8;
 
 
   // Fonts
 $global-font: 'Segoe UI',sans-serif;
+$global-font-title-product: 'Arial',sans-serif;
 
 // Container
 
