--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $cartColor: rgba(255, 255, 255, 0.75);
 $cartFormFooterBg: rgba(0,0,0,.03);
 $bgOfButton: #17a2b8;
 $hoverBgofButton: #0E84B8;
+$productPriceColor: #ffc107;
 
 
   // Fonts
