--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,6 +6,8 @@ $headerTitleBg: #f8f9fa;
 $headerTitleColor: #212529;
 $selectedCheckboxBg: #1D90FF;
 $selectBorder: #808080;
+$multiplyIconColor: #6c757d;
+$borderRemoveButton: #DC3545;
 
 // Colors RGBA
 
